Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -9,3 +9,14 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+#red {
+  background-color: red;
+}
+#orange {
+   background-color: 
+}
+#yellow
+#green
+#blue
+#indigo
+#violet
